add_subdirectory(Server)
add_subdirectory(Daemon)
add_subdirectory(Common)
add_subdirectory(IO)
add_subdirectory(Function)
add_subdirectory(AggregationFunction)
add_subdirectory(Interpreter)
add_subdirectory(Exception)
add_subdirectory(Parser)
add_subdirectory(Streams)
add_subdirectory(DataBases)
add_subdirectory(Storages)